--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>繪圖教學</title>
+    <title>DNA 波浪動畫</title>
     <style>
         html, body {
             margin: 0;
@@ -11,6 +11,7 @@
             width: 100%;
             height: 100%;
             overflow: hidden;
+            background: #000;
         }
         #waveCanvas {
             display: block;
@@ -20,9 +21,26 @@
             width: 100%;
             height: 100%;
         }
+        #connectButton {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            padding: 10px 20px;
+            background: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 100;
+        }
+        #connectButton:hover {
+            background: #45a049;
+        }
     </style>
 </head>
 <body>
+    <button id="connectButton">連接 Arduino</button>
+    <canvas id="waveCanvas"></canvas>
     <script src="main.js"></script>
 </body>
 </html>
